恢复被官方移除的 OnPCStatCalcEvent 事件 (#275)
* 修正合并 rAthena 源代码后的一些小问题

* 恢复被官方移除的 OnPCStatCalcEvent 事件

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -390,6 +390,8 @@ Body:
   Translation: ""
 - Original: "Account '%d' `character_slots` column is higher than supported MAX_CHARS (%d), update MAX_CHARS in mmo.hpp! capping to MAX_CHARS...\n"
   Translation: ""
+- Original: "Account '%s' could not be created because client side password encryption is enabled.\n"
+  Translation: ""
 - Original: "Account creation (account %s, id: %d, sex: %c)\n"
   Translation: ""
 - Original: "Account registration denied (registration limit exceeded)\n"
@@ -1524,10 +1526,10 @@ Body:
   Translation: ""
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
   Translation: "[副本系统] 已建立新地图 '%s' (%d) 基于现有地图 '%s' (%d) 构建\n"
-- Original: "[Instance] Created: %s (%hu).\n"
-  Translation: "[副本系统] 已创建副本: %s (副本编号: #%hu).\n"
-- Original: "[Instance] Destroyed %hu.\n"
-  Translation: "[副本系统] 已销毁编号为 #%hu 的副本.\n"
+- Original: "[Instance] Created: %s (%d).\n"
+  Translation: "[副本系统] 已创建副本: %s (副本实例编号: #%d).\n"
+- Original: "[Instance] Destroyed %d.\n"
+  Translation: "[副本系统] 已销毁实例编号为 #%d 的副本.\n"
 - Original: "[{CL_BG_RED}]     [{CL_BOLD}]                                                                      [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -2136,7 +2138,7 @@ Body:
   Translation: ""
 - Original: "buildin_inarray: not a variable\n"
   Translation: ""
-- Original: "buildin_instance_announce: Intance is not found.\n"
+- Original: "buildin_instance_announce: Instance not found.\n"
   Translation: ""
 - Original: "buildin_instance_check_clan: Invalid max level, %d\n"
   Translation: ""
@@ -2154,7 +2156,7 @@ Body:
   Translation: ""
 - Original: "buildin_instance_create: Unknown instance mode %d for '%s'\n"
   Translation: ""
-- Original: "buildin_instance_destroy: Trying to destroy invalid instance %hu.\n"
+- Original: "buildin_instance_destroy: Trying to destroy invalid instance %d.\n"
   Translation: ""
 - Original: "buildin_instance_id: Unknown instance mode %d.\n"
   Translation: ""
@@ -2170,7 +2172,9 @@ Body:
   Translation: ""
 - Original: "buildin_instance_live_info: Unknown instance information type \"%d\".\n"
   Translation: ""
-- Original: "buildin_instance_npcname: Invalid instance NPC (instance_id: %hu, NPC name: \"%s\".)\n"
+- Original: "buildin_instance_npcname: Invalid instance NPC (instance_id: %d, NPC name: \"%s\".)\n"
+  Translation: ""
+- Original: "buildin_instance_warpall: Instance is not found.\n"
   Translation: ""
 - Original: "buildin_isnpccloaked: %s is a non-existing NPC.\n"
   Translation: ""
@@ -2800,7 +2804,7 @@ Body:
   Translation: ""
 - Original: "do_reload_instance: Error setting character at instance start: character_id=%d instance=%s.\n"
   Translation: ""
-- Original: "do_reload_instance: Unexpected instance mode for instance %s (id=%u, mode=%u).\n"
+- Original: "do_reload_instance: Unexpected instance mode for instance %s (id=%d, mode=%u).\n"
   Translation: ""
 - Original: "do_sockets: epoll_wait() failed, %s!\n"
   Translation: ""
@@ -2886,45 +2890,25 @@ Body:
   Translation: ""
 - Original: "homunculus data save failure for account %d\n"
   Translation: ""
-- Original: "instance_addmap: Failed to create initial map for instance '%s' (%hu).\n"
+- Original: "instance_addmap: Failed to create initial map for instance '%s' (%d).\n"
   Translation: ""
-- Original: "instance_addmap: No maps added to instance '%s' (%hu).\n"
+- Original: "instance_addmap: No maps added to instance '%s' (%d).\n"
   Translation: ""
-- Original: "instance_addmap: Too many maps (%d) created for a single instance '%s' (%hu).\n"
+- Original: "instance_create: Character %d not found for instance '%s'.\n"
   Translation: ""
-- Original: "instance_create: Could not found '%s' from instance database.\n"
+- Original: "instance_create: Clan %d not found for instance '%s'.\n"
   Translation: ""
-- Original: "instance_create: character %d not found for instance '%s'.\n"
+- Original: "instance_create: Guild %d not found for instance '%s'.\n"
   Translation: ""
-- Original: "instance_create: clan %d not found for instance '%s'.\n"
+- Original: "instance_create: Party %d not found for instance '%s'.\n"
   Translation: ""
-- Original: "instance_create: guild %d not found for instance '%s'.\n"
+- Original: "instance_create: Unknown instance %s creation was attempted.\n"
   Translation: ""
-- Original: "instance_create: party %d not found for instance '%s'.\n"
-  Translation: ""
-- Original: "instance_create: unknown mode %u for owner_id %d and name %s.\n"
+- Original: "instance_create: Unknown mode %u for owner_id %d and name %s.\n"
   Translation: ""
 - Original: "instance_enter: Unknown instance \"%s\".\n"
   Translation: ""
-- Original: "instance_mapname2mapid: map name %s does not exist.\n"
-  Translation: ""
-- Original: "instance_readdb_sub: '%s'(Map%d) must not be equal to EnterMap for instance id '%d', skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: '%s'(Map%d) was already added for instance id '%d', skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: Cannot add instance with ID '%d'. Valid IDs are 1 ~ %d, skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: EnterX must be an integer value for instance '%d', skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: EnterY must be an integer value for instance '%d', skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: IdleTimeOut must be an integer value for instance '%d', skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: Invalid map '%s' as entrance map, skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: Invalid map '%s' in maplist, skipping...\n"
-  Translation: ""
-- Original: "instance_readdb_sub: TimeLimit must be an integer value for instance '%d', skipping...\n"
+- Original: "instance_mapid: Map ID %d does not exist.\n"
   Translation: ""
 - Original: "int_guild: Guild broken (%d)\n"
   Translation: "int_guild: 公会已被解散 (公会编号: %d)\n"
@@ -3242,7 +3226,7 @@ Body:
   Translation: ""
 - Original: "map_addinstancemap failed. map_num(%d) > map_max(%d)\n"
   Translation: ""
-- Original: "map_addisntancemap: can't add long map name \"%s\"\n"
+- Original: "map_addinstancemap: can't add long map name \"%s\"\n"
   Translation: ""
 - Original: "map_addobject: no free object id!\n"
   Translation: ""
@@ -3992,6 +3976,10 @@ Body:
   Translation: ""
 - Original: "pc_skillup: Player attempts to level up invalid skill '%d'\n"
   Translation: ""
+- Original: "pc_soulball_timer: %d soulball's available. (aid=%d tid=%d)\n"
+  Translation: ""
+- Original: "pc_soulball_timer: timer not found (aid=%d tid=%d)\n"
+  Translation: ""
 - Original: "pc_spiritball_timer: %d spiritball's available. (aid=%d cid=%d tid=%d)\n"
   Translation: ""
 - Original: "pc_spiritball_timer: timer not found (aid=%d cid=%d tid=%d)\n"
@@ -4042,13 +4030,13 @@ Body:
   Translation: ""
 - Original: "quest_delete: Character %d doesn't have quest %d.\n"
   Translation: ""
-- Original: "quest_read_txtdb: Insufficient columns in '%s' line %d (%d of %d)\n"
+- Original: "quest_read_db: Invalid item name %hu, drop not read.\n"
   Translation: ""
-- Original: "quest_read_txtdb: Invalid item reward '%d' (mob %d, optional) in line %d.\n"
+- Original: "quest_read_db: Invalid mob-class %hu, drop not read.\n"
   Translation: ""
-- Original: "quest_read_txtdb: Invalid monster as objective '%d' in line %d.\n"
+- Original: "quest_read_db: Invalid mob-class %hu, target not read.\n"
   Translation: ""
-- Original: "quest_read_txtdb: Invalid quest ID '%d' in '%s' line '%d' (min: 0, max: %d.)\n"
+- Original: "quest_read_db: Invalid quest ID '%d'.\n"
   Translation: ""
 - Original: "quest_update_status: Character %d doesn't have quest %d.\n"
   Translation: ""
@@ -4068,7 +4056,9 @@ Body:
   Translation: ""
 - Original: "read_elementaldb_sub: Elemental %d has invalid element type %d (max element is %d)\n"
   Translation: ""
-- Original: "read_hexptbl: Reached max level in %s [%d]. Remaining lines were not read.\n "
+- Original: "read_homunculus_expdb: Can't read %s\n"
+  Translation: ""
+- Original: "read_homunculus_expdb: Reached max level in %s [%d]. Remaining lines were not read.\n "
   Translation: ""
 - Original: "read_homunculus_skilldb: Invalid Homunculus skill '%s'.\n"
   Translation: ""
