--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -439,7 +439,7 @@ Body:
 - Original: "Broken pipe found... closing socket\n"
   Translation: ""
 - Original: "Buyingstore loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "已加载 '[{CL_WHITE}]%s[{CL_RESET}]' 的采购商店, 采购 '[{CL_WHITE}]%d[{CL_RESET}]' 个物品, 位于 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "Calibrating Timer Source, please wait... "
   Translation: ""
 - Original: "Can not connect to login-server.\n"
@@ -739,7 +739,7 @@ Body:
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: ""
+  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线采购的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个待采道具.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 共有 [{CL_WHITE}]%d[{CL_RESET}] 个 NPC 限购超市记录在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' suspend player records (Offline: '%d', AFK: '%d').\n"
@@ -1499,7 +1499,7 @@ Body:
 - Original: "Value of 'save_settings' is not set, player's data only will be saved every 'autosave_time' (%d seconds).\n"
   Translation: ""
 - Original: "Vending loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
-  Translation: "已加载 '[{CL_WHITE}]%s[{CL_RESET}]' 的露天商店, 贩卖 '[{CL_WHITE}]%d[{CL_RESET}]' 个物品, 位于 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
+  Translation: "已加载 '[{CL_WHITE}]%s[{CL_RESET}]' 的露天商店, 出售 '[{CL_WHITE}]%d[{CL_RESET}]' 个物品, 位于 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "WARNING: Invalid use of clif_send function\n"
   Translation: ""
 - Original: "WFIFOSET: Attempted to send zero-length packet, most likely 0x%04x (please report this).\n"
