--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -439,7 +439,7 @@ Body:
 - Original: "Broken pipe found... closing socket\n"
   Translation: ""
 - Original: "Buyingstore loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "已載入 '[{CL_WHITE}]%s[{CL_RESET}]' 的採購商店, 採購 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "Calibrating Timer Source, please wait... "
   Translation: ""
 - Original: "Can not connect to login-server.\n"
@@ -739,7 +739,7 @@ Body:
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: ""
+  Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線採購的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個待採道具.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 組資料, 共有 [{CL_WHITE}]%d[{CL_RESET}] 個 NPC 限購超市記錄在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' suspend player records (Offline: '%d', AFK: '%d').\n"
@@ -1499,7 +1499,7 @@ Body:
 - Original: "Value of 'save_settings' is not set, player's data only will be saved every 'autosave_time' (%d seconds).\n"
   Translation: ""
 - Original: "Vending loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
-  Translation: "已載入 '[{CL_WHITE}]%s[{CL_RESET}]' 的露天商店, 販賣 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
+  Translation: "已載入 '[{CL_WHITE}]%s[{CL_RESET}]' 的露天商店, 出售 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "WARNING: Invalid use of clif_send function\n"
   Translation: ""
 - Original: "WFIFOSET: Attempted to send zero-length packet, most likely 0x%04x (please report this).\n"
