解决在使用离线挂机指令后, 直接 recall 无法保持角色状态的问题

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -126,7 +126,7 @@ suspend_monsterignore: 3
 suspend_whisper_response: 2
 
 // 使用离线挂机指令 (@suspend) 进入挂机状态时,
-// 当地图服务器重启后自动上线的角色身体朝向哪个方位?
+// 当进入离线挂机模式那一瞬间, 以及地图服务器重启后自动上线的角色身体朝向哪个方位?
 // 
 // -1 = 保持原状
 //
@@ -140,7 +140,7 @@ suspend_whisper_response: 2
 suspend_offline_bodydirection: -1
 
 // 使用离线挂机指令 (@suspend) 进入挂机状态时,
-// 当地图服务器重启后自动上线的角色头部朝向哪个方位?
+// 当进入离线挂机模式那一瞬间, 以及地图服务器重启后自动上线的角色头部朝向哪个方位?
 //
 // -1 = 保持原状
 //  0 = 相对于身体朝向的正前方, 头部看向正前方
@@ -151,7 +151,7 @@ suspend_offline_bodydirection: -1
 suspend_offline_headdirection: -1
 
 // 使用离线挂机指令 (@suspend) 进入挂机状态时,
-// 当地图服务器重启后自动上线的角色处于什么样的站立/坐下状态?
+// 当进入离线挂机模式那一瞬间, 以及地图服务器重启后自动上线的角色处于什么样的站立/坐下状态?
 //
 // -1 = 保持原状
 //  0 = 站立
@@ -161,7 +161,7 @@ suspend_offline_headdirection: -1
 suspend_offline_sitdown: -1
 
 // 使用离开模式指令 (@afk) 进入挂机状态时,
-// 当地图服务器重启后自动上线的角色身体朝向哪个方位?
+// 当进入离开模式那一瞬间, 以及地图服务器重启后自动上线的角色身体朝向哪个方位?
 // 
 // -1 = 保持原状
 //
@@ -175,7 +175,7 @@ suspend_offline_sitdown: -1
 suspend_afk_bodydirection: -1
 
 // 使用离开模式指令 (@afk) 进入挂机状态时,
-// 当地图服务器重启后自动上线的角色头部朝向哪个方位?
+// 当进入离开模式那一瞬间, 以及地图服务器重启后自动上线的角色头部朝向哪个方位?
 //
 // -1 = 保持原状
 //  0 = 相对于身体朝向的正前方, 头部看向正前方
@@ -186,14 +186,14 @@ suspend_afk_bodydirection: -1
 suspend_afk_headdirection: -1
 
 // 使用离开模式指令 (@afk) 进入挂机状态时,
-// 当地图服务器重启后自动上线的角色处于什么样的站立/坐下状态?
+// 当进入离开模式那一瞬间, 以及地图服务器重启后自动上线的角色处于什么样的站立/坐下状态?
 //
 // -1 = 保持原状
 //  0 = 站立
 //  1 = 坐下
 // 
-// 默认值为: -1 (保持原状)
-suspend_afk_sitdown: -1
+// 默认值为: 1 (坐下)
+suspend_afk_sitdown: 1
 
 // 使用离开模式指令 (@afk) 进入挂机状态时,
 // 将角色的 "头饰上" 更换为哪一个指定的头饰外观编号?
