修正加载不存在的角色编号时, 角色服务器的返回值判断错误 修正可能不会加载部分 1.0.5 离线摆摊角色的问题

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -399,7 +399,7 @@ Body:
 - Original: "Already registered break\n"
   Translation: ""
 - Original: "Also, please make sure your login db has the correct communication username/passwords and the gender of the account is S.\n"
-  Translation: ""
+  Translation: "另外, 請檢查主資料庫中 login 表的內部通訊賬號密碼的性別, 確保設定為 S 而不是 M/F. \n"
 - Original: "An error occured in fread \n"
   Translation: ""
 - Original: "An error occured in fread grfio_reads, fname=%s \n"
@@ -443,7 +443,7 @@ Body:
 - Original: "Calibrating Timer Source, please wait... "
   Translation: ""
 - Original: "Can not connect to login-server.\n"
-  Translation: ""
+  Translation: "無法與登入伺服器建立連線.\n"
 - Original: "Can not open file \"%s\" for writing.\n"
   Translation: ""
 - Original: "Can't read %s\n"
@@ -633,7 +633,7 @@ Body:
 - Original: "Connection to Login Server lost.\n\n"
   Translation: "丟失與登入伺服器的連線.\n\n"
 - Original: "Connection to char-server failed %d, please check conf/import/map_conf userid and passwd.\n"
-  Translation: ""
+  Translation: "無法與角色伺服器建立連線 (錯誤程式碼: %d), 請檢查 map_athena.conf 裡的伺服器內部通訊賬號密碼是否正確.\n"
 - Original: "Console Commands are enabled.\n"
   Translation: ""
 - Original: "Console Silent Setting: %d\n"
@@ -1255,7 +1255,7 @@ Body:
 - Original: "Requested '[{CL_WHITE}]%d[{CL_RESET}]' guild castles from char-server...\n"
   Translation: "已向角色伺服器請求獲取 '[{CL_WHITE}]%d[{CL_RESET}]' 個公會城堡資訊...\n"
 - Original: "Requested non-existant character id: %d!\n"
-  Translation: ""
+  Translation: "請求載入的角色資料不存在 (角色編號: %d)\n"
 - Original: "Resetting sex of character '%s' (CID: %d, AID: %d) to 'U' due to incompatible PACKETVER.\n"
   Translation: ""
 - Original: "Retrieved '[{CL_WHITE}]%d[{CL_RESET}]' (failed: %d) guild bound item(s) for Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
@@ -1389,13 +1389,13 @@ Body:
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d).\n\n"
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
-  Translation: ""
+  Translation: "內部通訊賬號密碼通常設定在 map_athena.conf 和 char_athena.conf 檔案中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋\它? 這是最後一次確認. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
-  Translation: ""
+  Translation: "伺服器之間的內部通訊賬號密碼 (預設是: s1/p1) 可能是無效的.\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
   Translation: ""
 - Original: "This function was deprecated on '%s' and could become unavailable anytime soon.\n"
@@ -1685,7 +1685,7 @@ Body:
 - Original: "attachnpctimer: Invalid player.\n"
   Translation: ""
 - Original: "auth_db: Node (state %s) timed out for %d:%d\n"
-  Translation: ""
+  Translation: "auth_db: 鑑權節點 (狀態: %s) 已超時 (賬號編號: %d, 角色編號: %d).\n"
 - Original: "battle_attr_fix: unknown attribute type: atk=%d def_type=%d def_lv=%d\n"
   Translation: ""
 - Original: "battle_calc_attack: unknown attack type! %d (skill_id=%d, skill_lv=%d)\n"
@@ -3019,7 +3019,7 @@ Body:
 - Original: "intif_parse_Mail_send: data size error %d %[{PRIuPTR}]\n"
   Translation: ""
 - Original: "intif_parse_QuestLog: quest %d not found in DB.\n"
-  Translation: ""
+  Translation: "intif_parse_QuestLog: 無法在任務資料庫中找到編號為 %d 的任務, 請檢查任務資料庫是否完整.\n"
 - Original: "intif_parse_Registers: Unrecognized type %d\n"
   Translation: ""
 - Original: "intif_parse_StorageReceived: Failed to load! (AID: %d, type: %d)\n"
@@ -4511,7 +4511,7 @@ Body:
 - Original: "unknown unit layout at skill %d\n"
   Translation: ""
 - Original: "vending_reopen: (Error:%d) Load failed for autotrader '[{CL_WHITE}]%s[{CL_RESET}]' (CID=%d/AID=%d)\n"
-  Translation: ""
+  Translation: "vending_reopen: (錯誤程式碼: %d) 無法載入離線掛店玩家 '[{CL_WHITE}]%s[{CL_RESET}]' (角色編號: %d, 賬號編號: %d)\n"
 - Original: "vip_char_increase too high, can only go up to %d, according to your char_per_account config %d\n"
   Translation: ""
 - Original: "wrong egg item inventory %d\n"
