--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -399,7 +399,7 @@ Body:
 - Original: "Already registered break\n"
   Translation: ""
 - Original: "Also, please make sure your login db has the correct communication username/passwords and the gender of the account is S.\n"
-  Translation: ""
+  Translation: "另外, 请检查主数据库中 login 表的内部通讯账号密码的性别, 确保设置为 S 而不是 M/F. \n"
 - Original: "An error occured in fread \n"
   Translation: ""
 - Original: "An error occured in fread grfio_reads, fname=%s \n"
@@ -443,7 +443,7 @@ Body:
 - Original: "Calibrating Timer Source, please wait... "
   Translation: ""
 - Original: "Can not connect to login-server.\n"
-  Translation: ""
+  Translation: "无法与登录服务器建立连接.\n"
 - Original: "Can not open file \"%s\" for writing.\n"
   Translation: ""
 - Original: "Can't read %s\n"
@@ -633,7 +633,7 @@ Body:
 - Original: "Connection to Login Server lost.\n\n"
   Translation: "丢失与登录服务器的连接.\n\n"
 - Original: "Connection to char-server failed %d, please check conf/import/map_conf userid and passwd.\n"
-  Translation: ""
+  Translation: "无法与角色服务器建立连接 (错误代码: %d), 请检查 map_athena.conf 里的服务器内部通讯账号密码是否正确.\n"
 - Original: "Console Commands are enabled.\n"
   Translation: ""
 - Original: "Console Silent Setting: %d\n"
@@ -1255,7 +1255,7 @@ Body:
 - Original: "Requested '[{CL_WHITE}]%d[{CL_RESET}]' guild castles from char-server...\n"
   Translation: "已向角色服务器请求获取 '[{CL_WHITE}]%d[{CL_RESET}]' 个公会城堡信息...\n"
 - Original: "Requested non-existant character id: %d!\n"
-  Translation: ""
+  Translation: "请求加载的角色数据不存在 (角色编号: %d)\n"
 - Original: "Resetting sex of character '%s' (CID: %d, AID: %d) to 'U' due to incompatible PACKETVER.\n"
   Translation: ""
 - Original: "Retrieved '[{CL_WHITE}]%d[{CL_RESET}]' (failed: %d) guild bound item(s) for Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
@@ -1389,13 +1389,13 @@ Body:
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %d).\n\n"
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
-  Translation: ""
+  Translation: "内部通讯账号密码通常设置在 map_athena.conf 和 char_athena.conf 文件中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 转换后即将输出的 \"%s\" 已经有文件存在.\n[{CL_CYAN}][选择][{CL_RESET}]: 你是否需要覆盖它? 这是最后一次确认. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登录服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
-  Translation: ""
+  Translation: "服务器之间的内部通讯账号密码 (默认是: s1/p1) 可能是无效的.\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
   Translation: ""
 - Original: "This function was deprecated on '%s' and could become unavailable anytime soon.\n"
@@ -1685,7 +1685,7 @@ Body:
 - Original: "attachnpctimer: Invalid player.\n"
   Translation: ""
 - Original: "auth_db: Node (state %s) timed out for %d:%d\n"
-  Translation: ""
+  Translation: "auth_db: 鉴权节点 (状态: %s) 已超时 (账号编号: %d, 角色编号: %d).\n"
 - Original: "battle_attr_fix: unknown attribute type: atk=%d def_type=%d def_lv=%d\n"
   Translation: ""
 - Original: "battle_calc_attack: unknown attack type! %d (skill_id=%d, skill_lv=%d)\n"
@@ -3019,7 +3019,7 @@ Body:
 - Original: "intif_parse_Mail_send: data size error %d %[{PRIuPTR}]\n"
   Translation: ""
 - Original: "intif_parse_QuestLog: quest %d not found in DB.\n"
-  Translation: ""
+  Translation: "intif_parse_QuestLog: 无法在任务数据库中找到编号为 %d 的任务, 请检查任务数据库是否完整.\n"
 - Original: "intif_parse_Registers: Unrecognized type %d\n"
   Translation: ""
 - Original: "intif_parse_StorageReceived: Failed to load! (AID: %d, type: %d)\n"
@@ -4511,7 +4511,7 @@ Body:
 - Original: "unknown unit layout at skill %d\n"
   Translation: ""
 - Original: "vending_reopen: (Error:%d) Load failed for autotrader '[{CL_WHITE}]%s[{CL_RESET}]' (CID=%d/AID=%d)\n"
-  Translation: ""
+  Translation: "vending_reopen: (错误代码: %d) 无法加载离线挂店玩家 '[{CL_WHITE}]%s[{CL_RESET}]' (角色编号: %d, 账号编号: %d)\n"
 - Original: "vip_char_increase too high, can only go up to %d, according to your char_per_account config %d\n"
   Translation: ""
 - Original: "wrong egg item inventory %d\n"
