--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1834,13 +1834,11 @@
 // Pandas Extend Message - End
 // =============================================================
 
-// 若希望使用简体中文环境, 请移除 map_msg_chs.conf 开头的 // 注释符
-// 并在 map_msg_chn.conf 繁体中文的 import 开头添加 // 注释符
-import: conf/msg_conf/map_msg_chs.conf
+// 当地图服务器运行在简体中文系统时载入以下文件
+import_chs: conf/msg_conf/map_msg_chs.conf
 
-// 若希望使用繁体中文环境, 请移除 map_msg_chs.conf 开头的 // 注释符
-// 并在 map_msg_chs.conf 简体中文的 import 开头添加 // 注释符
-//import: conf/msg_conf/map_msg_chn.conf
+// 当地图服务器运行在繁体中文系统时载入以下文件
+import_cht: conf/msg_conf/map_msg_cht.conf
 
 // 若你对当前的消息翻译的不满意, 建议你不要对它们直接进行修改.
 // 而是直接前往以下 import 路径指定的文件, 把不满意的消息编号复制过去,
