能够忽略 Visual Lint 产生的中间文件或者报告文件

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,10 @@ __pycache__
 3rdparty/boost/bootstrap.log
 3rdparty/boost/project-config.jam*
 
+# Visual Lint
+/.visuallint
+/*.sln.vlconfig
+
 # IDE
 .vscode
 /*.diagsession
