移除 langtype 管理员指令, 并进行额外的修正处理

--- a/conf/atcommands.yml
+++ b/conf/atcommands.yml
@@ -907,10 +907,10 @@ Body:
       atcommand       battleconf     statusdb
       pcdb                    motd             script
       questdb              msgconf       packetdb
-  - Command: langtype
-    Help: |
-      Params: <language>
-      Changes your language setting.
+#  - Command: langtype
+#    Help: |
+#      Params: <language>
+#      Changes your language setting.
   - Command: limitedsale
     Help: |
       Opens the limited sale window.
