--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -133,7 +133,7 @@ groups: (
 		go: true
 		breakguild: true
 		channel: true
-		langtype: true
+		/* langtype: true */
 	}
 	permissions: {
 		attendance: false
