--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1835,9 +1835,13 @@
 // =============================================================
 
 // 当地图服务器运行在简体中文系统时载入以下文件
+// 在熊猫模拟器中 map_msg.conf 是地图服务器的默认消息数据库
+// 在载入此文件时, 将会使用中文消息把英文消息替换掉
 import_chs: conf/msg_conf/map_msg_chs.conf
 
 // 当地图服务器运行在繁体中文系统时载入以下文件
+// 在熊猫模拟器中 map_msg.conf 是地图服务器的默认消息数据库
+// 在载入此文件时, 将会使用中文消息把英文消息替换掉
 import_cht: conf/msg_conf/map_msg_cht.conf
 
 // 若你对当前的消息翻译的不满意, 建议你不要对它们直接进行修改.
