--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1104,8 +1104,10 @@ Body:
   Translation: ""
 - Original: "Mercenary loaded (ID: %d / Class: %d / CID: %d).\n"
   Translation: ""
+- Original: "Message #%d not found for langtype %d [%s], trying fallback...\n"
+  Translation: "编号为 #%d 的消息无法从%.0s \"%s\" 中被找到.\n"
 - Original: "Message #%d not found for langtype %d.\n"
-  Translation: ""
+  Translation: "编号为 #%d 的消息无法从当前的语言类型中被找到 (语言类型: %d).\n"
 - Original: "Messages file not found: %s\n"
   Translation: "无法找到消息数据库文件: %s\n"
 - Original: "Missing %d right curlys at file '%s', line '%d'.\n"
@@ -1332,8 +1334,6 @@ Body:
   Translation: ""
 - Original: "Skill name for Abra skill ID %hu is not known.\n"
   Translation: ""
-- Original: "Skill name for Improvised Song skill ID %hu is not known.\n"
-  Translation: ""
 - Original: "Skill name for Magic Mushroom skill ID %hu is not known.\n"
   Translation: ""
 - Original: "Skill name for Spell Book skill ID %hu is not known.\n"
@@ -1524,12 +1524,12 @@ Body:
   Translation: "您正在使用 root 权限运行熊猫模拟器, 但我们并不需要如此高的权限.\n"
 - Original: "Zero range by %d:%s, divide per 0 avoided!\n"
   Translation: ""
-- Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
-  Translation: "[副本系统] 已建立新地图 '%s' (%d) 基于现有地图 '%s' (%d) 构建\n"
-- Original: "[Instance] Created: %s (%d).\n"
+- Original: "[Instance] Created map '%s' (%d) from '%s' (%d).\n"
+  Translation: "[副本系统] 已建立新地图 '%s' (%d) 基于现有地图 '%s' (%d) 构建.\n"
+- Original: "[Instance] Created: %s (%d)\n"
   Translation: "[副本系统] 已创建副本: %s (副本实例编号: #%d).\n"
-- Original: "[Instance] Destroyed %d.\n"
-  Translation: "[副本系统] 已销毁实例编号为 #%d 的副本.\n"
+- Original: "[Instance] Destroyed: %s (%d)\n"
+  Translation: "[副本系统] 已销毁副本: %s (副本实例编号: #%d).\n"
 - Original: "[{CL_BG_RED}]     [{CL_BOLD}]                                                                      [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -3226,7 +3226,7 @@ Body:
   Translation: ""
 - Original: "map_addinstancemap failed. map_num(%d) > map_max(%d)\n"
   Translation: ""
-- Original: "map_addinstancemap: can't add long map name \"%s\"\n"
+- Original: "map_addinstancemap: Map name \"%s\" is too long.\n"
   Translation: ""
 - Original: "map_addobject: no free object id!\n"
   Translation: ""
