实现 nopet 地图标记的功能, 可以在指定地图上禁止宠物

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1753,6 +1753,12 @@
 // Battle Configure - cashmount_useitem_limit
 2003: Sorry, cannot use: %s when you get on the Cash Mount.
 
+// Mapflag - nopet
+2004: Pets are not allowed on this map, return to egg.
+2005: Sorry, pets are not allowed on this map.
+
+//2006~2011: FREE
+
 // @title
 2012: Usage: @title <title_id>
 2013: The comparison table of title ID and title is located on the client: data\luafiles514\lua files\datainfo\titletable.lub
