--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -33,6 +33,12 @@
 // 戰鬥配置選項 - cashmount_useitem_limit
 2003: 很抱歉, 當您坐上「商城坐騎」時, 無法使用: %s
 
+// 地圖示記 - nopet
+2004: 目前地圖禁止使用寵物, 已自動將寵物變回寵物蛋狀態.
+2005: 很抱歉, 目前地圖禁止召喚寵物.
+
+//2006~2011: 空閑
+
 // @title
 2012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
 2013: 編號與稱號的對照表位於客戶端: data\luafiles514\lua files\datainfo\titletable.lub
