--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -33,6 +33,12 @@
 // 战斗配置选项 - cashmount_useitem_limit
 2003: 很抱歉, 当您坐上“商城坐骑”时, 无法使用: %s
 
+// 地图标记 - nopet
+2004: 当前地图禁止使用宠物, 已自动将宠物变回宠物蛋状态.
+2005: 很抱歉, 当前地图禁止召唤宠物.
+
+//2006~2011: 空闲
+
 // @title
 2012: 使用方法: @title <称号编号, 若设为 0 则取消称号>
 2013: 编号与称号的对照表位于客户端: data\luafiles514\lua files\datainfo\titletable.lub
