能够支持根据系统语言读取对应的消息文件 (#282)
* 在 Debug 模式下启用"完整的程序数据库"

* 能够支持根据系统语言读取对应的消息文件

* 能够忽略 Visual Lint 产生的中间文件或者报告文件

* 移除 langtype 管理员指令, 并进行额外的修正处理

* 进行一些无关紧要的小改动

--- a/conf/msg_conf/char_msg.conf
+++ b/conf/msg_conf/char_msg.conf
@@ -198,13 +198,15 @@
 
 //--------------------------------------------------------------
 
-// 若希望使用简体中文环境, 请移除 char_msg_chs.conf 开头的 // 注释符
-// 并在 map_msg_chn.conf 繁体中文的 import 开头添加 // 注释符
-import: conf/msg_conf/char_msg_chs.conf
+// 当角色服务器运行在简体中文系统时载入以下文件
+// 在熊猫模拟器中 char_msg.conf 是角色服务器的默认消息数据库
+// 在载入此文件时, 将会使用中文消息把英文消息替换掉
+import_chs: conf/msg_conf/char_msg_chs.conf
 
-// 若希望使用繁体中文环境, 请移除 char_msg_chn.conf 开头的 // 注释符
-// 并在 map_msg_chs.conf 简体中文的 import 开头添加 // 注释符
-//import: conf/msg_conf/char_msg_chn.conf
+// 当角色服务器运行在繁体中文系统时载入以下文件
+// 在熊猫模拟器中 char_msg.conf 是角色服务器的默认消息数据库
+// 在载入此文件时, 将会使用中文消息把英文消息替换掉
+import_cht: conf/msg_conf/char_msg_cht.conf
 
 // 若你对当前的消息翻译的不满意, 建议你不要对它们直接进行修改.
 // 而是直接前往以下 import 路径指定的文件, 把不满意的消息编号复制过去,
