对战斗配置文件进行一轮汉化

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1413,6 +1413,11 @@
 1293: 找不到在线玩家 %s.
 1294: 他们是一家人。
 
+// @showexp
+741: 获得
+742: 丢失
+743: %s基础经验: %ld 点 (%0.2f%%) / 职业经验: %ld 点 (%0.2f%%)
+
 // @version
 1295: 熊猫模拟器版本 %s%s
 1296: 当前服务器的运行目录中无法读取到 SVN/Git 版本信息.
