--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -12,6 +12,11 @@
 // 而轉換的目標編碼與運行伺服器的作業系統語言有關係
 //--------------------------------------------------------------
 
+// @showexp
+741: 獲得
+742: 丟失
+743: %s基礎經驗: %ld 點 (%0.2f%%) / 職業經驗: %ld 點 (%0.2f%%)
+
 // @version
 1295: 熊貓模擬器版本 %s%s
 1296: 目前伺服器的執行目錄中無法讀取到 SVN/Git 版本資訊.
