--- a/conf/battle/battle.conf
+++ b/conf/battle/battle.conf
@@ -6,17 +6,37 @@
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
 //   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
-//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
-//             128: NPC, 512: 元素精灵
+//             ------------------------------------
+//             | 十六进制  |  十进制  |  对应单位 |
+//             | 0x001     |  1       |  玩家     |
+//             | 0x002     |  2       |  魔物     |
+//             | 0x004     |  4       |  宠物     |
+//             | 0x008     |  8       |  生命体   |
+//             | 0x010     |  16      |  佣兵     |
+//             | 0x080     |  128     |  NPC      |
+//             | 0x200     |  512     |  元素精灵 |
+//             ------------------------------------
 //             掩码选项一个数值可以表示里面有多个内容. 
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
+//             掩码选项支持的填写格式有两种: 分别是十六进制和十进制,
+//             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
-// Who should have a baseatk value (makes str affect damage)? (Note 3)
-enable_baseatk: 0x9
+// 哪些单位能拥有基础攻击值 (即 BaseAtk 值)
+// 或者说能够让他的str属性影响到他输出的伤害? (掩码选项)
+// 默认值是 9, 表示此选项包含: 玩家(1) + 生命体(8)
+// 此选项针对复兴前版本 (Pre-Renewal)
+enable_baseatk: 9
+
+// 哪些单位能拥有基础攻击值 (即 BaseAtk 值)
+// 或者说能够让他的str属性影响到他输出的伤害? (掩码选项)
+// 默认值是 0x29F, 表示此选项包含: 全部可选择单位
+// 此选项针对复兴后版本 (Renewal)
 enable_baseatk_renewal: 0x29F
 
-// Who can have perfect flee? (Note 3)
+// 哪些单位能够掌握完全回避? (掩码选项)
+// 这里需要注意: 能掌握不代表它已经会, 只能表示它能会.
+// 默认值是 1, 表示此选项包含: 玩家(1)
 enable_perfect_flee: 1
 
 // 哪些单位能够产生暴击? (掩码选项)
