--- a/conf/battle/drops.conf
+++ b/conf/battle/drops.conf
@@ -6,10 +6,20 @@
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
 //   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
-//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
-//             128: NPC, 512: 元素精灵
+//             ------------------------------------
+//             | 十六进制  |  十进制  |  对应单位 |
+//             | 0x001     |  1       |  玩家     |
+//             | 0x002     |  2       |  魔物     |
+//             | 0x004     |  4       |  宠物     |
+//             | 0x008     |  8       |  生命体   |
+//             | 0x010     |  16      |  佣兵     |
+//             | 0x080     |  128     |  NPC      |
+//             | 0x200     |  512     |  元素精灵 |
+//             ------------------------------------
 //             掩码选项一个数值可以表示里面有多个内容. 
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
+//             掩码选项支持的填写格式有两种: 分别是十六进制和十进制,
+//             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
 // 物品掉落时, 是否直接掉落到玩家的背包中? (开关选项)
@@ -316,7 +326,9 @@ alchemist_summon_reward: 1
 // 填写 10000 当打到/偷到任何物品, 都广播
 rare_drop_announce: 0
 
-// Does autoloot take into account player bonuses and penalties? (Note 1)
-// If RENEWAL_DROP, Bubble Gum, or any other modifiers are active autoloot
-// will take them into account.
+// 自动拾取是否会受到各种掉率影响 (开关选项)
+// 填写 1 表示会收到影响, 填写 0 表示不会受到影响
+//
+// 潜在的影响包括但不限: 体型修正, Luk修正, 掉宝糖, VIP加成, 地图标记修正等
+// 默认值: 0 - 不会受到影响
 autoloot_adjust: 0
