--- a/conf/battle/exp.conf
+++ b/conf/battle/exp.conf
@@ -6,10 +6,20 @@
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
 //   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
-//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
-//             128: NPC, 512: 元素精灵
+//             ------------------------------------
+//             | 十六进制  |  十进制  |  对应单位 |
+//             | 0x001     |  1       |  玩家     |
+//             | 0x002     |  2       |  魔物     |
+//             | 0x004     |  4       |  宠物     |
+//             | 0x008     |  8       |  生命体   |
+//             | 0x010     |  16      |  佣兵     |
+//             | 0x080     |  128     |  NPC      |
+//             | 0x200     |  512     |  元素精灵 |
+//             ------------------------------------
 //             掩码选项一个数值可以表示里面有多个内容. 
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
+//             掩码选项支持的填写格式有两种: 分别是十六进制和十进制,
+//             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
 // 基础经验值倍率 (百分比选项)
@@ -165,16 +175,22 @@ death_penalty_job: 100
 // 注意: 这是 Zeny 的百分比选项, 填写 100 表示惩罚玩家失去 1% 的Zeny
 zeny_penalty: 0
 
-// Will players on max base/job level lose the EXP on death?
-// 0: Never lose (default as in official).
-// 1: Lose Base EXP.
-// 2: Lose Job EXP.
+// 当玩家的基础/职业等级已经到达满级的情况下,
+// 角色死亡是否会丢失经验值? (掩码选项)
+// 
+// 0 = 不会丢失 (官服默认)
+// 1 = 会丢失基础经验值
+// 2 = 会丢失职业经验值 
+// 
+// 提示: 若您希望 1 和 2 同时生效则直接填写 3 即可
 death_penalty_maxlv: 0
 
-// Will display experience gained from killing a monster. (Note 1)
+// 获得或失去经验值时, 是否会显示在聊天栏中? (开关选项)
+// 默认值为: no
 disp_experience: no
 
-// Will display zeny earned (from mobs, trades, etc) (Note 1)
+// 获得或失去 Zeny 时, 是否会显示在聊天栏中? (开关选项)
+// 默认值为: no
 disp_zeny: no
 
 // Use the contents of db/statpoint.txt when doing a stats reset and leveling up? (Note 1)
