--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -6,10 +6,20 @@
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
 //   掩码选项: 没有特殊说明的情况下, 默认用来表示游戏中各单位的类型
-//             1: 玩家, 2: 魔物, 4: 宠物, 8: 生命体, 16: 佣兵
-//             128: NPC, 512: 元素精灵
+//             ------------------------------------
+//             | 十六进制  |  十进制  |  对应单位 |
+//             | 0x001     |  1       |  玩家     |
+//             | 0x002     |  2       |  魔物     |
+//             | 0x004     |  4       |  宠物     |
+//             | 0x008     |  8       |  生命体   |
+//             | 0x010     |  16      |  佣兵     |
+//             | 0x080     |  128     |  NPC      |
+//             | 0x200     |  512     |  元素精灵 |
+//             ------------------------------------
 //             掩码选项一个数值可以表示里面有多个内容. 
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
+//             掩码选项支持的填写格式有两种: 分别是十六进制和十进制,
+//             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
 // 是否强制没有 loadevent 标记的地图
