--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -204,21 +204,22 @@ suspend_table: suspend
 // 若改成 yes 的话, 地图服务器将不会再加载 db 目录中的 item_db.txt、
 // mob_db.txt 及 mob_skill_db.txt, 而是转而加载这些文件在数据库中对应的表.
 // 
-// 将此选项改成 yes 之前, 请先往 map_server_db 选项所指向的数据库导入
-// 以下的 SQL 脚本, 否则 map-server 将找不到物品和魔物等数据:
+// 将此选项改成 yes 之前, 请先往 map_server_db 选项所指向的数据库导入以下的 SQL 脚本,
+// 否则 map-server 将找不到物品和魔物等数据:
 // 
-// 无论复兴前后的版本, 请导入 sql-files\item_cash_db.sql
-// 无论复兴前后的版本, 请导入 sql-files\item_cash_db2.sql
-// 复兴前的版本, 请导入 sql-files\item_db.sql       复兴后请导入 sql-files\item_db_re.sql
-// 复兴前的版本, 请导入 sql-files\item_db2.sql      复兴后请导入 sql-files\item_db2_re.sql
-// 复兴前的版本, 请导入 sql-files\mob_db.sql        复兴后请导入 sql-files\mob_db_re.sql
-// 复兴前的版本, 请导入 sql-files\mob_db2.sql       复兴后请导入 sql-files\mob_db2_re.sql
-// 复兴前的版本, 请导入 sql-files\mob_skill_db.sql  复兴后请导入 sql-files\mob_skill_db_re.sql
-// 复兴前的版本, 请导入 sql-files\mob_skill_db2.sql 复兴后请导入 sql-files\mob_skill_db2_re.sql
+// 无论你使用的是复兴前还是复兴后的版本, 
+// 请按顺序导入 sql-files\main\creation\use_sql_db\common 目录中的全部文件
 // 
-// 导入之后, 也就意味着 item_db 等信息都已经被搬入到 MySQL 数据库中了, 
+// 若您使用的是复兴后 (Renewal) 版本, 
+// 请按顺序导入 sql-files\main\creation\use_sql_db\renewal 目录中的全部文件
+// 
+// 若您使用的是复兴前 (Pre-Renewal) 版本, 
+// 请按顺序导入 sql-files\main\creation\use_sql_db\pre-renewal 目录中的全部文件
+// 
+// 导入之后也就意味着 item_db 等信息都已经被搬入到 MySQL 数据库中了, 
 // 以后您想再修改 item_db 等信息时, 将不再是修改 db\[pre-]re\item_db.txt 文件了
-// 而是去 MySQL 数据库中直接更新对应的表
+// 而是去 MySQL 数据库中直接更新对应的表.
+// 提示: 魔物数据库 mob_db 和魔物技能数据库 mob_skill_db 同理
 use_sql_db: no
 
 inter_server_conf: inter_server.yml
