--- a/conf/login_athena.conf
+++ b/conf/login_athena.conf
@@ -61,10 +61,10 @@ stdout_with_ansisequence: no
 // 例如: 想要记录 [Warning]、[Error]、[Debug] 开头的信息, 
 //       只需要将1、2、4相加, 将 console_msg_log 设置为 7 即可 (1+2+4)! 
 // 
-// 日志信息的记录, 并不会被 console_silent 选项影响.
-// 也就是说, 假如 console_msg_log 设置为 2 想记录 [Error] 信息,
-// 而在 console_silent 中设置为 16 想隐藏 [Error] 信息, 此时系统
-// 将会隐藏[Error]信息, 与此同时记录[Error]信息
+// 日志信息的记录并不会被 console_silent 选项影响.
+// 也就是说假如 console_msg_log 设置为 2 想记录 [Error] 信息,
+// 而在 console_silent 中设置为 16 想隐藏 [Error] 信息,
+// 此时系统将会隐藏 [Error] 信息不显示到控制台, 但与此同时会记录 [Error] 信息到日志中
 console_msg_log: 0
 
 // 将登录服务器在控制台中产生的要记录的信息, 写到下面指定的日志文件中
