--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -137,6 +137,7 @@ set( COMMON_MINI_HEADERS
 	"${COMMON_SOURCE_DIR}/translate.hpp"
 	"${COMMON_SOURCE_DIR}/database.hpp"
 	"${COMMON_SOURCE_DIR}/performance.hpp"
+	"${COMMON_SOURCE_DIR}/iconv.hpp"
 	${LIBCONFIG_HEADERS} # needed by showmsg.hpp
 	${BREAKPAD_HEADERS}
 	${COMMON_ADDITIONALL_HPP} # needed by Windows
@@ -165,6 +166,8 @@ set( COMMON_MINI_INCLUDE_DIRS
 	${LIBCONFIG_INCLUDE_DIRS}
 	${BREAKPAD_INCLUDE_DIRS}
 	${YAML_INCLUDE_DIRS}
+	${opencc_INCLUDE_DIRS}
+	${uchardet_INCLUDE_DIRS}
 	CACHE INTERNAL ""
 )
 
@@ -212,6 +215,7 @@ if( WITH_ZLIB )
 		"${COMMON_SOURCE_DIR}/cryptopp.hpp"
 		"${COMMON_SOURCE_DIR}/translate.hpp"
 		"${COMMON_SOURCE_DIR}/performance.hpp"
+		"${COMMON_SOURCE_DIR}/iconv.hpp"
 		${LIBCONFIG_HEADERS} # needed by conf.hpp/showmsg.hpp
 		${BREAKPAD_HEADERS}
 		${COMMON_ADDITIONALL_HPP} # needed by Windows
@@ -256,6 +260,7 @@ if( WITH_ZLIB )
 		${YAML_INCLUDE_DIRS}
 		${BREAKPAD_INCLUDE_DIRS}
 		${opencc_INCLUDE_DIRS}
+		${uchardet_INCLUDE_DIRS}
 		CACHE INTERNAL "common_base include dirs"
 	)
 
@@ -264,8 +269,8 @@ if( WITH_ZLIB )
 		CACHE INTERNAL "common_base definitions"
 	)
 
-	# 设置依赖项目, 这里设置了依赖 yaml-cpp breakpad cryptopp-static libopencc 这几个项目
-	set( DEPENDENCIES breakpad yaml-cpp cryptopp-static libopencc )
+	# 设置依赖项目, 这里设置了依赖 yaml-cpp breakpad cryptopp-static libopencc libuchardet 这几个项目
+	set( DEPENDENCIES breakpad yaml-cpp cryptopp-static libopencc libuchardet )
 
 	# 设置依赖的库文件
 	# 包括 GLOBAL_LIBRARIES, ZLIB_LIBRARIES, 包括依赖项目的库文件
