更科学的指定自定义 CMAKE 的下载位置

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -3,6 +3,7 @@ queries:
 extraction:
   cpp:
     after_prepare:
+      - cd $LGTM_WORKSPACE
       - mkdir cmake_builed
       - CMAKE_URL="https://cmake.org/files/v3.18/cmake-3.18.0-Linux-x86_64.tar.gz"
       - wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake_builed
